feat: add header with elements in the page

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,15 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="singolo1.css">
+    <link rel="stylesheet" href="fonts.css">    
     <title>Singolo</title>
 </head>
 <body>
     <header>
-        <nav></nav>
-    </header>
-    <main></main>
+        <div id="logo">
+            <p>Singolo<span class="star">*<span></p>
+        </div>
+        <nav>
+            <ul>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>Services</li></a>
+                <a href="#"><li>Portfolio</li></a>
+                <a href="#"><li>About</li></a>
+                <a href="#"><li>Contact</li></a>
+            </ul>
+        </nav>
+    </header>    
+    <div class="bottom-line-header"></div>
+    <main>
+        <section></section>
+        <section>
+            <article>
+
+            </article>
+        </section>
+        <section>
+            <article></article>
+            <article></article>
+            <article></article>
+            <article></article>
+            <article></article>
+            <article></article>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
