feat: add phones section on the page

--- a/singolo1.html
+++ b/singolo1.html
@@ -24,7 +24,23 @@
     </header>    
     <div class="bottom-line-header"></div>
     <main>
-        <section></section>
+        <section id="slider">
+            <div id="main-phone">
+                <div class="left-chevron">
+                    <img src="assets/chevron.png" alt="left-chevron">  
+                </div>
+                <div class="left-phone">
+                    <img src="assets/phone-vertical-without-shadow.png" alt="phone-vertical"> 
+                </div>
+                <div class="right-phone">
+                    <img src="assets/phone-horizontal-without-shadow.png" alt="phone-horizontal"> 
+                </div>                             
+                <div class="right-chevron">
+                    <img src="assets/chevron.png" alt="right-chevron">
+                </div>
+            </div>
+            <div class="bottom-line-phone"></div>
+        </section>
         <section>
             <article>
 
