--- a/singolo1.html
+++ b/singolo1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="singolo1.css">
-    <link rel="stylesheet" href="fonts.css">    
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap&subset=latin-ext" rel="stylesheet">
+    <!--<link rel="stylesheet" href="fonts.css"> -->   
     <title>Singolo</title>
 </head>
 <body>
@@ -41,19 +42,94 @@
             </div>
             <div class="bottom-line-phone"></div>
         </section>
-        <section>
-            <article>
-
-            </article>
+        <section id="articales">
+            <h1>Our Services</h1>
+            <article class="our-services">
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor 
+                    ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            </article>     
+            <div id="articles-list">
+                <article>
+                   <div>
+                       <img src="assets/pen.svg" alt="pen">
+                    </div>
+                   <div>
+                        <p class="title-article">
+                            Custom Design
+                        </p>
+                        <p class="self-article">
+                            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
+                        </p>
+                   </div>                     
+                </article>
+                <article>
+                    <div>
+                        <img src="assets/lightbulb.svg" alt="bulb">
+                    </div>
+                    <div>
+                        <p class="title-article">
+                            Inovative Ideas
+                        </p>
+                        <p class="self-article">
+                            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <div>
+                        <img src="assets/heart.svg" alt="heart">
+                    </div>
+                    <div>
+                        <p class="title-article">
+                            Love Is The Answer
+                        </p>
+                        <p class="self-article">
+                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <div>
+                        <img src="assets/phone.svg" alt="phone">
+                    </div>
+                    <div>
+                        <p class="title-article">
+                            Responsive Layout
+                        </p>
+                        <p class="self-article">
+                            Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <div>
+                        <img src="assets/bubble.svg" alt="bubble">
+                    </div>
+                    <div>
+                        <p class="title-article">
+                            24 / 7 Support
+                        </p>
+                        <p class="self-article">
+                            Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .
+                        </p>
+                   </div>
+                </article>
+                <article>
+                    <div>
+                        <img src="assets/star.svg" alt="star">
+                    </div>
+                    <div>
+                        <p class="title-article">
+                            Feel Like A Star
+                        </p>
+                        <p class="self-article">
+                            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
+                        </p>
+                    </div>
+                </article>
+            </div>             
         </section>
-        <section>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-        </section>
+        <div class="bottom-line"></div>
     </main>
     <footer></footer>
 </body>
