--- a/singolo3.html
+++ b/singolo3.html
@@ -28,14 +28,36 @@
                     <p class="text-info">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. </p>
                 </div>
                 <div class="contact-block">
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <div class="contact location">
+                        <p>
+                            Elm St. 14/05 Lost City 
+                        </p>
+                    </div>
+                    <div class="contact phone">
+                        <p>
+                            03528 331 86 35
+                        </p>
+                    </div>
+                    <div class="contact mail">
+                        <p>
+                            info@singolo.com
+                        </p>
+                    </div>
                 </div>
             </div>  
         </div>
     </div>
     <div id="bottom-line"></div>
-    <footer></footer>
+    <footer>
+        <div class="footer">
+            <p id="copyright">&copy; Copyright 2013</p>
+            <div class="social-links">
+                <a href="https://facebook.com"><img src="assets/Facebook.png" alt="Facebook"></a>
+                <a href="https://google.com"><img src="assets/Google.png" alt="Google"></a>
+                <a href="https://twitter.com"><img src="assets/Twitter.png" alt="Twitter"></a>
+                <a href="https://linkedIn.com"><img src="assets/LinkedIn.png" alt="LinkedIn"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
