--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=	, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singolo</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" async></script>
 </head>
+
 <body>
     <header>
         <div id="logo">
@@ -13,11 +16,11 @@
         </div>
         <nav>
             <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>Services</li></a>
-                <a href="#"><li>Portfolio</li></a>
-                <a href="#"><li>About</li></a>
-                <a href="#"><li>Contact</li></a>
+                <a href="#slider"><li class="active menu-item" onclick="clickLi(this)">Home</li></a>
+                <a href="#articales"><li class="menu-item" onclick="clickLi(this)">Services</li></a>
+                <a href="#portfolio"><li class="menu-item" onclick="clickLi(this)">Portfolio</li></a>
+                <a href="#about-us"><li class="menu-item" onclick="clickLi(this)">About</li></a>
+                <a href="#contac-section"><li class="menu-item" onclick="clickLi(this)">Contact</li></a>
             </ul>
         </nav>
     </header>    
@@ -25,16 +28,19 @@
     <main>
         <section id="slider">
             <div id="main-phone">
-                <div class="left-chevron">
+                <div class="left-chevron chevron">
                     <img src="assets/chevron.png" alt="left-chevron">  
                 </div>
+                <div class="second-image-slider none"></div>
                 <div class="left-phone">
+                    <div class="left-phone-dark"></div>
                     <img src="assets/phone-vertical-without-shadow.png" alt="phone-vertical"> 
                 </div>
                 <div class="right-phone">
+                    <div class="right-phone-dark"></div>
                     <img src="assets/phone-horizontal-without-shadow.png" alt="phone-horizontal"> 
                 </div>                             
-                <div class="right-chevron">
+                <div class="right-chevron chevron">
                     <img src="assets/chevron.png" alt="right-chevron">
                 </div>
             </div>
@@ -216,51 +222,61 @@
         </section>
     </main>  
 
-    <div class="form">
-        <div class="get-a-quote">
-            <p id="title-get-quote">Get a Quote</p>
-            <p id="get-quote-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        </div>
-        <div class="data-block">
-            <div id="form">
-                <form action="" method="">
-                    <input type="text" name="name" value="Name (Required)" placeholder="Name (Required)" pattern="[-a-z0-9!#$%&'*+/=?^_`{|}~]+(\.[-a-z0-9!#$%&'*+/=?^_`{|}~]+)*" required>
-                    <input type="email" name="email" value="Email (Required)" placeholder="Email (Required)" pattern="^[-a-z0-9!#$%&'*+/=?^_`{|}~]+(?:\.[-a-z0-9!#$%&'*+/=?^_`{|}~]+)*@(?:[a-z0-9]([-a-z0-9]{0,61}[a-z0-9])?\.)*(?:aero|arpa|asia|biz|cat|com|coop|edu|gov|info|int|jobs|mil|mobi|museum|name|net|org|pro|tel|travel|[a-z][a-z])$" required >
-                    <input type="text" name="subject" value="Subject" placeholder="Subject">
-                    <input type="text" name="describe" value="Describe your project in detail..." placeholder="Describe your project in detail...">
-                    <input type="submit" value="Submit" placeholder="Submit">
-                </form>
+    <section id="contac-section">
+        <div class="form">
+            <div class="get-a-quote">
+                <p id="title-get-quote">Get a Quote</p>
+                <p id="get-quote-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             </div>
-            <div class="contacts">
-                <div class="contact-info">
-                    <p class="title-info">Contact Information</p>
-                    <p class="text-info">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. </p>
+            <div class="data-block">
+                <div id="form">
+                    <form action="" method="">
+                        <input type="text" id="name" name="name" value="Name (Required)" placeholder="Name (Required)" pattern="[-a-z0-9!#$%&'*+/=?^_`{|}~]+(\.[-a-z0-9!#$%&'*+/=?^_`{|}~]+)*" required>
+                        <input type="email" id="email" name="email" value="Email (Required)" placeholder="Email (Required)" pattern="^[-a-z0-9!#$%&'*+/=?^_`{|}~]+(?:\.[-a-z0-9!#$%&'*+/=?^_`{|}~]+)*@(?:[a-z0-9]([-a-z0-9]{0,61}[a-z0-9])?\.)*(?:aero|arpa|asia|biz|cat|com|coop|edu|gov|info|int|jobs|mil|mobi|museum|name|net|org|pro|tel|travel|[a-z][a-z])$" required >
+                        <input type="text"  id="subject" name="subject" value="Subject" placeholder="Subject">
+                        <input type="text" id="describe" name="describe" value="Describe your project in detail..." placeholder="Describe your project in detail...">
+                        <input type="submit" value="Submit" placeholder="Submit" id="submit">
+                    </form>
                 </div>
-                <div class="contact-block">
-                    <div class="contact location">
-                        <p>
-                            Elm St. 14/05 Lost City 
-                        </p>
+                <div class="contacts">
+                    <div class="contact-info">
+                        <p class="title-info">Contact Information</p>
+                        <p class="text-info">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. </p>
                     </div>
-                    <div class="contact phone">
-                        <a href="tel:03528 331 86 35">
+                    <div class="contact-block">
+                        <div class="contact location">
                             <p>
-                                03528 331 86 35
+                                Elm St. 14/05 Lost City 
                             </p>
-                        </a>
+                        </div>
+                        <div class="contact phone">
+                            <a href="tel:03528 331 86 35">
+                                <p>
+                                    03528 331 86 35
+                                </p>
+                            </a>
+                        </div>
+                        <div class="contact mail">
+                            <a href="mailto:info@singolo.com">
+                                <p>
+                                    info@singolo.com
+                                </p>
+                            </a>
+                        </div>
                     </div>
-                    <div class="contact mail">
-                        <a href="mailto:info@singolo.com">
-                            <p>
-                                info@singolo.com
-                            </p>
-                        </a>
-                    </div>
-                </div>
-            </div>  
+                </div>  
+            </div>
         </div>
-    </div>
+    </section>    
     <div id="bottom-line"></div>
+    <div class="modal-view">
+        <p>Письмо отправлено</p>
+        <div class="modal-name"><p></p></div>
+        <div class="modal-email"><p></p></div>
+        <div class="modal-subject"><p>Без темы</p></div>
+        <div class="modal-describe"><p>Без описания</p></div>
+        <div class="close-btn" style="width: 50px;height:50px;"><p>OK</p></div>
+    </div>
     <footer>
         <div class="footer">
             <p id="copyright">&copy; Copyright 2013</p>
