fix: add little thing

--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
         </div>
     </section>    
     <div id="bottom-line"></div>
-    <div class="modal-view">
+    <div class="modal-view none">
         <p>Письмо отправлено</p>
-        <div class="modal-name"><p></p></div>
-        <div class="modal-email"><p></p></div>
-        <div class="modal-subject"><p>Без темы</p></div>
-        <div class="modal-describe"><p>Без описания</p></div>
-        <div class="close-btn" style="width: 50px;height:50px;"><p>OK</p></div>
+        <div id="modal-name"><p></p></div>
+        <div id="modal-email"><p></p></div>
+        <div id="modal-subject"><p>Без темы</p></div>
+        <div id="modal-describe"><p>Без описания</p></div>
+        <div id="close-btn" style="width: 50px;height:50px;border: 1px solid white"><p>OK</p></div>
     </div>
     <footer>
         <div class="footer">
