fix: fix bag with default value for empty subject and descripion fields

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
         <p>Письмо отправлено</p>
         <div id="modal-name"><p></p></div>
         <div id="modal-email"><p></p></div>
-        <div id="modal-subject"><p>Без темы</p></div>
-        <div id="modal-describe"><p>Без описания</p></div>
+        <div id="modal-subject"><p></p></div>
+        <div id="modal-describe"><p></p></div>
         <div id="close-btn" style="width: 50px;height:50px;border: 1px solid white"><p>OK</p></div>
     </div>
     <div class="shadow none"></div>
