feat: add responsive functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <div class="burger"></div>
         <div id="logo">
             <p>Singolo<span class="star">*<span></p>
         </div>
@@ -33,11 +34,9 @@
                 </div>
                 <div class="second-image-slider none"></div>
                 <div class="left-phone">
-                    <div class="left-phone-dark"></div>
                     <img src="assets/phone-vertical-without-shadow.png" alt="phone-vertical"> 
                 </div>
                 <div class="right-phone">
-                    <div class="right-phone-dark"></div>
                     <img src="assets/phone-horizontal-without-shadow.png" alt="phone-horizontal"> 
                 </div>                             
                 <div class="right-chevron chevron">
